--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -3,9 +3,11 @@ aboutUs;About us;Om os
 accessories;Accessories;Accessories
 accessoriesAndToys;Accessories & Toys;Accessories & legetøj
 account;Account;Konto
+accountAlttext;Elegant woman in a black coat and matching hat, radiating timeless style. A bold red stripe decorates the background.;Elegant kvinde i sort frakke og matchende hat, der udstråler tidløs stil. En markant rød stribe pryder baggrunden.
 actionOnlyAllowedForAdmin;This action is only allowed for administrator;Denne handling er kun tilladt for administrator
 add;Add;Tilføj
 additionalInfo;Additional info;Supplerende information
+addressAlttext;Man in a tailored suit walking confidently down a wide, stepped staircase.;Mand i skræddersyet jakkesæt, der går selvsikkert ned ad en bred trappe.
 addToBag;Add to bag;Læg i indkøbskurv
 addToStock;Add to stock;Tilføj til lager
 admin;Admin;Admin
@@ -220,6 +222,7 @@ noUser;User not found. Please sign up first;Bruger blev ikke fundet. Opret dig f
 numberOfReviews;Number of reviews;Antal reviews
 orange;Orange;Orange
 orders;Orders;Ordrer
+orderAlttext;Young boy in black jeans and a white T-shirt layered with a blue-checkered shirt, looking expectant.;Ung dreng i sorte jeans og hvid T-shirt kombineret med en blåternet skjorte, ser forventningsfuld ud.
 outOf;out of;ud af
 outOfStock;Out of stock;Udsolgt
 page;Page;Side
