--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -220,6 +220,7 @@ noTumbleDry;Not suitable for tumble drying;Ikke egnet til tørretumbler
 notVisibleInShop;is not visible in the shop until the main category is published;bliver først synlig i shoppen, når hovedkategorien er udgivet
 noUser;User not found. Please sign up first;Bruger blev ikke fundet. Opret dig først
 numberOfReviews;Number of reviews;Antal reviews
+onlyAdminsAssignRole;Only admins can assign roles;Kun administratorer kan tildele roller
 orange;Orange;Orange
 orders;Orders;Ordrer
 orderAlttext;Young boy in black jeans and a white T-shirt layered with a blue-checkered shirt, looking expectant.;Ung dreng i sorte jeans og hvid T-shirt kombineret med en blåternet skjorte, ser forventningsfuld ud.
