--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -381,6 +381,7 @@ users;Users;Brugere
 userUpdated;User updated;Bruger opdateret
 view;View;Se
 viewAndTrackOrders;View and track your orders.;Tjek og følg dine ordrer.
+viewInfo;View info;Se info
 verifyAndUpdateInfo;Verify and update your information;Bekræft og opdatér dine oplysninger
 viewCart;View your cart;Se din indkøbskurv
 viewCategory;View category;Se kategori
