--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -402,3 +402,4 @@ womenBannerAltText;Sophisticated woman in a matching jacket and trousers with a 
 womensFashion;Women’s fashion;Damemode
 yellow;Yellow;Gul
 yesterday;Yesterday;I går
+yourDetailsUpdated;Your details was updated;Dine detaljer blev opdaterede
