--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -7,6 +7,7 @@ accountAlttext;Elegant woman in a black coat and matching hat, radiating timeles
 actionOnlyAllowedForAdmin;This action is only allowed for administrator;Denne handling er kun tilladt for administrator
 add;Add;Tilføj
 additionalInfo;Additional info;Supplerende information
+addOrManageAddress;Add or manage your addresses;Tilføj eller ret dine adresser
 addressAlttext;Man in a tailored suit walking confidently down a wide, stepped staircase.;Mand i skræddersyet jakkesæt, der går selvsikkert ned ad en bred trappe.
 addToBag;Add to bag;Læg i indkøbskurv
 addToStock;Add to stock;Tilføj til lager
