--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -368,6 +368,7 @@ unavailable;Unavailable;Ikke tilgængelig
 unknownError;Unknown error;Ukendt fejl
 unsupportedFile;is not supported type;er ikke understøttet
 update;Update;Opdater
+updateAddress;Update address;Opdater adresse
 updateCategory;Update category;Opdater kategori
 updatedAt;Updated at;Opdateret
 updatePreferences;Update Preferences;Opdater præferencer
