--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -10,6 +10,7 @@ addAddress;Add address;Tilføj adresse
 additionalInfo;Additional info;Supplerende information
 addOrManageAddress;Add or manage your addresses;Tilføj eller ret dine adresser
 addressAltText;Man in a tailored suit walking confidently down a wide, stepped staircase.;Mand i skræddersyet jakkesæt, der går selvsikkert ned ad en bred trappe.
+addressDeleted;Address deleted;Addresse blev slettet
 addToBag;Add to bag;Læg i indkøbskurv
 addToStock;Add to stock;Tilføj til lager
 admin;Admin;Admin
