--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -65,11 +65,12 @@ colors;Colours;Farver
 colours;Colours;Farver
 compact;Compact;Kompakt
 confirmPassword;Confirm password;Gentag adgangskode
-country;Country;Land
 contact;Contact;Kontakt
+continueShopping;Continue shopping;Fortsæt med at handle
 copy;Copy;Kopi
 copyAction;Copy;Kopier
 couldNotFindInfo;Sorry, We couldn’t find the information you’re looking for;Vi kunne desværre ikke finde den information, du søger
+country;Country;Land
 countInStock;Items in stock;Antal på lager
 create;Create;Opret
 createAccount;Create account;Opret konto
