--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -230,6 +230,7 @@ notifyMeMessage;Choose below, and we’ll notify you when it’s restocked; Væl
 notifySuccessMeMessage;We got your request. Hopefully we’ll be in touch soon;Vi har modtaget din forespørgsel. Forhåbentlig hører du snart fra os
 noPreference;No preference;Ingen præference
 notProvided;Not provided;Ikke oplyst
+notPublished;Not published;Ikke udgivet
 notRatedYet;Not rated yet;Ikke bedømt endnu
 noTumbleDry;Not suitable for tumble drying;Ikke egnet til tørretumbler
 notVisibleInShop;is not visible in the shop until the main category is published;bliver først synlig i shoppen, når hovedkategorien er udgivet
