--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -99,6 +99,7 @@ deleteUser;Delete user;Slet bruger
 delivery;Delivery;Levering
 deliveryText;We offer secure delivery with careful packaging. All orders are processed within 1–2 business days, and you'll receive a tracking link as soon as your order is shipped.;Vi tilbyder sikker levering med omhyggelig emballering. Alle ordrer behandles inden for 1-2 hverdage, og du modtager et trackinglink, så snart din ordre er afsendt.
 descending;descending;faldende
+describeProduct;Describe the product;Fortæl om produktet
 description;Description;Beskrivelse
 desktopAltText;A young woman smiles in surprise, elegantly delighted by a young man.;En ung kvinde smiler af overraskelse, elegant overrasket af en ung mand.
 details;Details;Detaljer
