--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -174,6 +174,7 @@ kidsFashion;Kids’s fashion;Børnemode
 language;Language;Sprog
 left;left;tilbage
 list;List;Liste
+loaded;loaded;indlæst
 loading;Loading;Loading
 lock;Lock;Hængelås
 login;Sign in;Log ind
@@ -237,6 +238,7 @@ noTumbleDry;Not suitable for tumble drying;Ikke egnet til tørretumbler
 notVisibleInShop;is not visible in the shop until the main category is published;bliver først synlig i shoppen, når hovedkategorien er udgivet
 noUser;User not found. Please sign up first;Bruger blev ikke fundet. Opret dig først
 numberOfReviews;Number of reviews;Antal reviews
+of;of;af
 onlyAdminsAssignRole;Only admins can assign roles;Kun administratorer kan tildele roller
 onlyFourAddresses;You may have up to 4 addresses;Du kan højst have 4 adresser
 orange;Orange;Orange
@@ -348,6 +350,7 @@ showAll;Show all;Vis alle
 showAllTags;Show all tags;Vis alle tags
 showContent;Show content;Vis indhold
 showLessTags;Show less tags;Vis færre tags
+showing;Showing;Viser
 showPassword;Show password;Vis adgangskode
 showPrice;Show price;Vis pris
 silver;Silver;Sølv
