--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -145,6 +145,10 @@ globe;Globe;Globus
 goBack;Go back;Gå tilbage
 gold;Gold;Guld
 goToContent;Go to content;Gå til indhold
+gotoFirstPage;Go to first page;Gå til første side
+gotoLastPage;Go to last page;Gå til sidste side
+gotoNextPage;Go to next page;Gå til næste side
+gotoPrevPage;Go to previous page;Gå til forrige side
 green;Green;Grøn
 grey;Grey;Grå
 grid;Grid;Grid
