--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -251,6 +251,7 @@ orderAltText;Young boy in black jeans and a white T-shirt layered with a blue-ch
 outOf;out of;ud af
 outOfStock;Out of stock;Udsolgt
 page;Page;Side
+pagination;Pagination;sideinddeling
 panel;Panel;Panel
 parentCategoryIs;Parent category is;Hovedkategori er
 password;Password;Adgangskode
