--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -144,6 +144,7 @@ filtersApplied;Filters applied;Filtre anvendt
 globe;Globe;Globus
 goBack;Go back;Gå tilbage
 gold;Gold;Guld
+gotoPage;Go to page;Gå til side
 goToContent;Go to content;Gå til indhold
 gotoFirstPage;Go to first page;Gå til første side
 gotoLastPage;Go to last page;Gå til sidste side
