--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -110,6 +110,7 @@ discoverCollection;Discover Collection;Se kollektionen
 discoverLatestTrends;Discover latest trends;Udforsk de nyeste tendenser
 discoverLatestTrendsAltText;A man playfully surprises a woman by covering her eyes from behinds.;En mand overrasker legende en kvinde ved at dække hendes øjne bagfra.
 displayDensity;Display density;Visningstæthed
+displayOptions;Display options;Visningsindstillinger
 doNotBleach;Do not bleach;Må ikke bleges
 email;Email;E-mail
 employee;Employee;Ansat
@@ -300,7 +301,9 @@ productInformation;Product information;Produkt oplysninger
 productList;Product list;Produktliste
 productName;Product name;Produkt navn
 productNameRequired;Please insert product name;Indsæt venligst produktnavn
+productNavigation;Produkt navigation;Produkt navigation
 productNotFound;Product not found;Produktet findes ikke
+productPerPage;products per page;produkter pr. side
 productPlural;Product(s);Produkt(er)
 productQuantity;Product quantity;Produkt antal
 products;Products;Produkter
@@ -339,6 +342,7 @@ scheduledToBePublished;is scheduled to be published at;er planlagt til udgivelse
 search;Search;Søg
 selectedColor;Selected colour;Valgt farve
 selectedSize;Selected size;Valgt størrelse
+selectNumber;Select number;Vælg antal
 selectPreferences;Select preferred language and currency;Vælg venligst sprog og valuta
 selectSize;Select size;Vælg størrelse
 shareReview;Share review;Del anmeldelse
