--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -17,6 +17,7 @@ addToBag;Add to bag;Læg i indkøbskurv
 addToStock;Add to stock;Tilføj til lager
 admin;Admin;Admin
 adminCannotBeDeleted;Administrator cannot be deleted;Administrator kan ikke slettes
+all;All;Alle
 allowedFormats;Allowed formats;Tilladte formater
 alreadyLoggedIn;You are already logged in;Du er allerede logget ind
 alreadyLoggedInAs;You are already logged in as;Du er allerede logget ind som
