--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -1,5 +1,5 @@
 ﻿key;en;da
-aboutUs;About us;Om os
+about;About us;Om os
 accessories;Accessories;Accessories
 accessoriesAndToys;Accessories & Toys;Accessories & legetøj
 account;Account;Konto
