aria label language

--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -346,7 +346,7 @@ search;Search;Søg
 selectedColor;Selected colour;Valgt farve
 selectedSize;Selected size;Valgt størrelse
 selectNumber;Select number;Vælg antal
-selectPreferences;Select preferred language and currency;Vælg venligst sprog og valuta
+selectPreferences;Select preferred language and currency;Vælg sprog og valuta
 selectSize;Select size;Vælg størrelse
 shareReview;Share review;Del anmeldelse
 shareYourExperience;Share your experience;Del din oplevelse
