--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -365,6 +365,7 @@ showAllTags;Show all tags;Vis alle tags
 showContent;Show content;Vis indhold
 showLessTags;Show less tags;Vis færre tags
 showing;Showing;Viser
+showingAllProducts;Showing all products;Viser alle produkter
 showPassword;Show password;Vis adgangskode
 showPrice;Show price;Vis pris
 silver;Silver;Sølv
