--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -272,6 +272,7 @@ paymentAndDelivery;Payment and delivery;Betaling og levering
 paymentText;You can pay by credit card or MobilePay. We only charge your payment once your order has been shipped;Betaling kan ske med kreditkort eller MobilePay. Vi trækker først beløbet, når din ordre er afsendt
 pcs;pcs;stk.
 pencil;Pencil;Blyant
+perPage;per page;pr. side
 phone;Phone;Telefon
 phoneInfo;We’ll only contact you when needed, for instance, to update you on your order or reply to a customer service question.;Vi kontakter dig kun, når det er påkrævet, eksempelvis ved vigtige ændringer i din ordre eller for at svare på en henvendelse til kundeservice.
 pink;Pink;Pink
