--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -6,7 +6,7 @@ account;Account;Konto
 accountAltText;Elegant woman in a black coat and matching hat, radiating timeless style. A bold red stripe decorates the background.;Elegant kvinde i sort frakke og matchende hat, der udstråler tidløs stil. En markant rød stribe pryder baggrunden.
 actionOnlyAllowedForAdmin;This action is only allowed for administrator;Denne handling er kun tilladt for administrator
 add;Add;Tilføj
-additionalColorsCount;additional options not shown in this preview;ekstra muligheder som ikke vises i denne visning
+additionalOptionsCount;additional options not shown in this preview;ekstra muligheder som ikke vises i denne visning
 address;Address;Adresse
 addressCreated;Address was created;Adresse blev tilføjet
 addressUpdated;Address was updated;Adresse blev opdateret
