--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -16,6 +16,7 @@ addressAltText;Man in a tailored suit walking confidently down a wide, stepped s
 addressDeleted;Address deleted;Addresse blev slettet
 addToBag;Add to bag;Læg i indkøbskurv
 addToStock;Add to stock;Tilføj til lager
+addToCart;Add to cart;Tilføj til kurv
 admin;Admin;Admin
 adminCannotBeDeleted;Administrator cannot be deleted;Administrator kan ikke slettes
 all;All;Alle
