--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -258,6 +258,7 @@ of;of;af
 onlyAdminsAssignRole;Only admins can assign roles;Kun administratorer kan tildele roller
 onlyFourAddresses;You may have up to 4 addresses;Du kan højst have 4 adresser
 orange;Orange;Orange
+originaPrice;Original price;Før pris
 orders;Orders;Ordrer
 orderAltText;Young boy in black jeans and a white T-shirt layered with a blue-checkered shirt, looking expectant.;Ung dreng i sorte jeans og hvid T-shirt kombineret med en blåternet skjorte, ser forventningsfuld ud.
 outOf;out of;ud af
