--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -298,6 +298,7 @@ pleaseRemoveOneOrMore;please remove one or more;fjern venligst en eller flere
 pleaseSelectParentCategory;Please select parent category;Vælg venligst hovedkategori
 preferences;Preferences;Præferencer
 price;Price;Pris
+priceRange;Price range;Prisinterval
 priceRequired;Please insert price;Indsæt venligst pris
 pricing;Pricing;Prissætning
 product;Product;Produkt
